4.5.3
-----
1. Use '-1' as default library id.
2. Show skip-overlay upon 'mouseup' not 'click' event.
3. For consistency, only start volume change on swipe when landscape if
   started on cover image (as per portrait view).
4. Fix plugin info retrievel for LMS >= 9.0 - thanks to Michael Herger.

4.5.2
-----
1. Update translations.
2. Fix jumplist not showing for albums and works lists.
3. Only show works if main 'Works' category is enabled, not any additional
   browse 'Works' category.
4. Fix multi-cover listing in additional 'Works' browse modes.
5. Prepend work to track title if work is defined and not already in title.
6. Ask for extra track meta-data for works info when using LMS >= 9.0
7. Fix MAI when called after 'More'.

4.5.1
-----
1. Fix now-playing and MAI backgrounds.

4.5.0
-----
 1. Add icons to release type and search headers.
 2. On desktop layout if click on link in now-playing or MAI that shows browse
    view, then 'Go back' will go back to now-playing or MAI.
 3. If sorting tracks by 'title' then sub-sort by artist.
 4. Add material style image for random play in queue.
 5. Add support for Lyrion 9.0.0 'Works' feature.
 6. Add 'Shuffle' options to alarm dialog.
 7. Re-add some missing Russian translations.
 8. Always use name 'Lyrion'
 9. List album contributors in 'Information' page.
10. Add 'Scroll to' action for artists with multiple release categories.
11. Don't allow "fake" add/play-all for Qobuz playlists.
12. 'header' support for SlimBrowse lists.
13. Add 'appearance', 'collection', 'conductor', 'orchestra', 'remix', and
    'work' release type icons.
14. When getting release type icons try to map to a pre-supplied icon if
    specific icon not found.
15. Update queue settings when show or pin.
16. Adjust now-playing background to prevent shadow/glow effect at edges, and
    increase amount of blur.
17. Use "0" as URL for alarm playlist if set to current queue.

4.4.1
-----