@@ -5,6 +5,7 @@
 3. For consistency, only start volume change on swipe when landscape if
    started on cover image (as per portrait view).
 4. Fix plugin info retrievel for LMS >= 9.0 - thanks to Michael Herger.
+5. Ensure no images for 'search' or 'entry' items.
 
 4.5.2
 -----
